--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
@@ -55,6 +55,10 @@ md-select {
     height: 60px;
 }
 
+.md-char-counter{
+	color:black
+}
+
 /* Cabeçalho principal para todas as dialogs */
 .default-popup-header { display: block; height: 60px; min-height: 60px !important; max-height: 60px; }
 
