--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -14,7 +14,7 @@
 	        </div>
 	    </md-toolbar>
 	
-		<md-toolbar flex class="md-hue-3 md-osm-theme-theme toolbar-content">
+		<md-toolbar flex class="md-hue-3 md-osm-theme-theme toolbar-content" style="overflow:auto; height:90%">
 			<form layout="row" class="default-frame" >
 				<md-toolbar  class="toolbar-temp default-filter" layout="row">
 					<div flex layout="column">
@@ -25,7 +25,7 @@
 							</md-input-container>
 					            
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
-					            <md-button class="md-raised md-primary md-hue-2" ng-click="listFamiliasByFilters()">Filtrar</md-button>
+					            <md-button class="md-raised md-primary md-hue-2" ng-click="!moreFilters ? listFamiliasByFilters() : listFamiliasByMoreFilters()">Filtrar</md-button>
 					            <md-button class="md-raised md-primary md-hue-3" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
 					            	Mais opções
 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
@@ -33,6 +33,19 @@
 					            </md-button>
 				            </div>			            			            			            			            
 				    	</div>
+				    	
+				    	<div class="more-filters" layout="column" ng-if="moreFilters">
+							<div layout="row" style="color:black">
+								<md-checkbox ng-model="model.familia.filters.ativo" aria-label="Checkbox 1">
+									Mostrar ativos
+						        </md-checkbox>
+					    		
+					    		<md-checkbox ng-model="model.familia.filters.inativo" aria-label="Checkbox 1">
+									Mostrar inativos
+						        </md-checkbox>
+							</div>				    									
+				    	</div>
+				    	
 				    </div>
 				</md-toolbar>
 			</form>	
@@ -68,11 +81,11 @@
 					
 					<md-divider></md-divider>
 					<div class="default-paginator" layout layout-align="end center" ng-if="model.familia.page.content.length > 0">
-						{{ model.familia.page.pageable.page + 1 }} de {{ Math.ceil(model.familia.page.total/model.familia.page.pageable.size) }}
-						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) < 2" ng-click="onfamiliaPaginationChange(false)">
+						{{ model.familia.page.pageable.page + 1 }} de {{ totalPagesFamilia }}
+						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) < 2" ng-click="onFamiliaPaginationChange(false)">
 							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.familia.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
-						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) >= Math.ceil(model.familia.page.total/model.familia.page.pageable.size)" ng-click="onfamiliaPaginationChange(true)">
+						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onFamiliaPaginationChange(true)">
 							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.familia.page.pageable.page + 1) >= Math.ceil(model.familia.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
 			  		</div>
