--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -19,6 +19,7 @@
 		
 		<!-- Controllers -->
 		<script type="text/javascript" th:src="@{/modules/home/controllers/home-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/dialog/default-confirm-dialog-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/familia/familia-controller.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/familia/popup/adicionar-integrante-familiar-controller-popup.js}"></script>
