--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -14,7 +14,7 @@
 	        </div>
 	        
 	         <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(LIST_STATE)">Voltar</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(FAMILIA_LIST_STATE)">Voltar</md-button>
 	        </div>
 	        
 	        <div ng-if="model.familia.entity.ativo == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
